# ISS_Backend_2.0

./: .python-version  app.py  gunicorn_standalone.py  pyproject.toml  requirements.txt
ci/: .dockerignore  Dockerfile  docker-compose.yml
