[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
blinker = "1.8.2"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
Flask = "3.0.3"
Flask-Cors = "4.0.1"
idna = "3.7"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
MarkupSafe = "2.1.5"
python-dotenv = "1.0.1"
requests = "2.32.2"
urllib3 = "2.2.1"
Werkzeug = "3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

